[package]
name = "oxchain"
version = "0.1.2"
edition = "2021"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.23"
sha2 = "0.10.6"
hex = "0.4.3"
serde = { version = "1.0.151", features = ["derive"] }
serde_json = "1.0.89"
x25519-dalek = "1"
rand = "0.7"